test/netlist/error/duplicated-input.bop
A(a, a) = b
where
  b = Id(a);
end where;
